[package]
name = "human-review"
version = "0.1.2"
edition = "2021"
description = "Human review CLI tool for AI"
license = "MIT"

[[bin]]
name = "hrevu"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = "0.19"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Browser open
open = "5.3"

# Terminal colors
colored = "2.1"

# Static assets embedding
rust-embed = "8.5"
